<resources>
    <string name="app_name">GHCWidget</string>
    <string name="login_to_github">Log in to GitHub</string>

    <string name="login_url">https://github.com/login</string>
    <string name="domain">github.com</string>

    <string name="username_pref_title">Username</string>
    <string name="username_pref_summary">Set your GitHub username</string>
    <string name="username_pref_dialog">GitHub username</string>

    <string name="color_pref_title">Color theme</string>
    <string name="months_pref_title">Number of months to display</string>
    <string name="transparency_pref_title">Transparency</string>
    <string name="start_week_pref_title">Start week on Monday</string>
    <string name="show_days_pref_title">Show days of week</string>
    <string name="refresh_pref_title">Manual refresh</string>

    <string name="loading_error">Loading failed</string>
    <string name="not_found">Username not found</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="total">total</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
</resources>
