<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
            android:key="username"
            android:title="@string/username_pref_title"
            android:summary="@string/username_pref_summary"
            android:dialogTitle="@string/username_pref_dialog" />

    <ListPreference
            android:key="color_theme"
            android:title="@string/color_pref_title"
            android:dialogTitle="@string/color_pref_title" />

    <EditTextPreference
            android:key="months"
            android:title="@string/months_pref_title"
            android:numeric="integer"/>
    <CheckBoxPreference
            android:key="start_on_monday"
            android:title="@string/start_week_pref_title"/>
    <CheckBoxPreference
            android:key="days_labels"
            android:title="@string/show_days_pref_title"
            android:defaultValue="true"/>

    <Preference
            android:key="refresh"
            android:title="@string/refresh_pref_title"/>

</PreferenceScreen>